--- a/index.html
+++ b/index.html
@@ -9,33 +9,57 @@
             font-family: Arial, sans-serif;
             margin: 0;
             padding: 20px;
-            background-color: #f4f4f4;
-            color: #333;
+            background-color: #121212;
+            color: #e0e0e0;
+            text-align: center;
         }
         .container {
             max-width: 800px;
             margin: auto;
-            background: white;
+            background: #1e1e1e;
             padding: 20px;
-            box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
+            box-shadow: 0px 0px 15px rgba(255, 255, 255, 0.1);
             border-radius: 10px;
         }
         h1, h2 {
-            color: #0073e6;
+            color: #4db8ff;
         }
         ul {
             list-style-type: none;
             padding: 0;
         }
         ul li {
-            margin: 5px 0;
+            margin: 10px 0;
+            padding: 8px;
+            background: #252525;
+            border-radius: 5px;
+        }
+        p {
+            background: #252525;
+            padding: 10px;
+            border-radius: 5px;
+        }
+        a {
+            color: #4db8ff;
+            text-decoration: none;
+        }
+        a:hover {
+            text-decoration: underline;
+        }
+        .profile-pic {
+            width: 150px;
+            height: 150px;
+            border-radius: 50%;
+            object-fit: cover;
+            margin-bottom: 20px;
         }
     </style>
 </head>
 <body>
     <div class="container">
+        <img src="gon.jpg" alt="Photo de Mohamed Omar Guenaien" class="profile-pic">
         <h1>Mohamed Omar Guenaien</h1>
-        <p>Email: omar.guenaien@esprit.tn | Téléphone: 26317300</p>
+        <p>Email: <a href="mailto:omar.guenaien@esprit.tn">omar.guenaien@esprit.tn</a> | Téléphone: 26317300</p>
         
         <h2>Formation</h2>
         <p>ESPRIT – Diplôme d’ingénieur en Network Infrastructure and Data Security (en cours)</p>
