--- a/index.html
+++ b/index.html
@@ -104,6 +104,8 @@
         <div class="section">
             <h2>Formation</h2>
             <p>ESPRIT – Diplôme d’ingénieur en Network Infrastructure and Data Security (en cours)</p>
+            <p>Baccalauréat en Sciences Économiques, Mention "Assez Bien"</p>
+            <p>Brevet, Mention "Assez Bien"</p>
         </div>
 
         <div class="section">
