--- a/index.html
+++ b/index.html
@@ -104,8 +104,9 @@
         <div class="section">
             <h2>Formation</h2>
             <p>ESPRIT – Diplôme d’ingénieur en Network Infrastructure and Data Security (en cours)</p>
-            <p>Baccalauréat en Sciences Économiques, Mention "Assez Bien"</p>
-            <p>Brevet, Mention "Assez Bien"</p>
+            <p>Lycée Jean Rostand – Baccalauréat en Sciences Économiques, Mention "Assez Bien"</p>
+            <p>Collège F. Dolto – Brevet, Mention "Assez Bien"</p>
+
         </div>
 
         <div class="section">
