--- a/index.html
+++ b/index.html
@@ -11,20 +11,15 @@
             padding: 0;
             background-color: #121212;
             color: #e0e0e0;
-            text-align: center;
             line-height: 1.6;
         }
         .container {
             max-width: 900px;
             margin: 50px auto;
             background: #1e1e1e;
-            padding: 30px;
+            padding: 40px;
             border-radius: 12px;
             box-shadow: 0 4px 20px rgba(0, 0, 0, 0.2);
-            transition: transform 0.3s ease-in-out;
-        }
-        .container:hover {
-            transform: scale(1.02);
         }
         h1, h2 {
             color: #4db8ff;
@@ -33,24 +28,23 @@
         h1 {
             font-size: 2.5em;
             margin-bottom: 10px;
+            text-align: center;
         }
         .profile-pic {
             width: 150px;
             height: 150px;
             border-radius: 50%;
             object-fit: cover;
-            margin-bottom: 20px;
+            margin: 0 auto 20px;
+            display: block;
             border: 4px solid #4db8ff;
-            transition: transform 0.3s ease-in-out;
-        }
-        .profile-pic:hover {
-            transform: rotate(360deg);
         }
         p {
             background: #252525;
             padding: 15px;
             border-radius: 8px;
             font-size: 1.1em;
+            margin: 0 0 20px;
         }
         a {
             color: #4db8ff;
@@ -80,18 +74,37 @@
         }
         .section h2 {
             text-decoration: underline;
+            font-size: 1.8em;
+            margin-bottom: 15px;
         }
         .btn {
+            display: inline-block;
             background-color: #4db8ff;
             color: white;
-            padding: 10px 20px;
+            padding: 12px 24px;
             border-radius: 8px;
             text-decoration: none;
             font-weight: bold;
             transition: background-color 0.3s;
+            margin-top: 20px;
         }
         .btn:hover {
             background-color: #357abd;
+        }
+        .contact-info {
+            text-align: center;
+            margin-bottom: 30px;
+        }
+        .contact-info p {
+            margin: 5px 0;
+        }
+        .skills-grid {
+            display: grid;
+            grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+            gap: 15px;
+        }
+        .skills-grid li {
+            margin: 0;
         }
     </style>
 </head>
@@ -99,19 +112,21 @@
     <div class="container">
         <img src="gon.jpg" alt="Photo de Mohamed Omar Guenaien" class="profile-pic">
         <h1>Mohamed Omar Guenaien</h1>
-        <p>Email: <a href="mailto:omar.guenaien@esprit.tn">omar.guenaien@esprit.tn</a> | Téléphone: 26317300</p>
+        <div class="contact-info">
+            <p>Email: <a href="mailto:omar.guenaien@esprit.tn">omar.guenaien@esprit.tn</a></p>
+            <p>Téléphone: 26317300</p>
+        </div>
 
         <div class="section">
             <h2>Formation</h2>
             <p>ESPRIT – Diplôme d’ingénieur en Network Infrastructure and Data Security (en cours)</p>
             <p>Lycée Jean Rostand – Baccalauréat en Sciences Économiques, Mention "Assez Bien"</p>
             <p>Collège F. Dolto – Brevet, Mention "Assez Bien"</p>
-
         </div>
 
         <div class="section">
             <h2>Compétences Techniques</h2>
-            <ul>
+            <ul class="skills-grid">
                 <li>Langages : Python, C, Bash, JavaScript, Java, SQL</li>
                 <li>Cybersécurité : Wireshark, Nmap, Metasploit, Burp Suite</li>
                 <li>Réseaux : TCP/IP, VLAN, DHCP, DNS</li>
@@ -125,8 +140,8 @@
             <h2>Projets Universitaires et Personnels</h2>
             <ul>
                 <li>Jeu 2D en C et SDL 1.2</li>
-                <li>Java Student Management System avec SQL</li>
-                <li>Port Scanner</li>
+                <li>Java Student Management System avec MySQL</li>
+                <li>Port Scanner avec python</li>
             </ul>
         </div>
 
@@ -171,7 +186,9 @@
             </ul>
         </div>
 
-        <a href="mailto:omar.guenaien@esprit.tn" class="btn">Contactez-moi</a>
+        <div style="text-align: center;">
+            <a href="mailto:omar.guenaien@esprit.tn" class="btn">Contactez-moi</a>
+        </div>
     </div>
 </body>
 </html>
